--- a/Ecu911/Pages/ChangePassword.razor
+++ b/Ecu911/Pages/ChangePassword.razor
@@ -48,6 +48,14 @@
 
     private  string currentPassword = "";
 
+    private Logs loguser = new Logs();
+
+    protected override async Task OnInitializedAsync()
+    {
+        await apiService.SetAuthHeaders();
+
+    }
+
 
     private IEnumerable<string> PasswordStrength(string pw)
     {
@@ -87,7 +95,9 @@
         {
             response.EnsureSuccessStatusCode();
             request.OldPassword = "";
+            await RegistroLogs();
             snackBar.Add("Contraseña cambiada exitosamente Vuleve a ingresar", MudBlazor.Severity.Info);
+            
             LogOut();
         }
         catch (HttpRequestException)
@@ -96,7 +106,24 @@
             snackBar.Add($"{data.Message}", MudBlazor.Severity.Error);
         }
     }
+    private async Task RegistroLogs()
+    {
 
+        HttpResponseMessage? response = new();
+
+        loguser.userName = await sessionStorage.GetItemAsync<string>("Id");
+        loguser.action = "Se realizo cambio de contraseña";
+        //logs
+        try
+        {
+            response = await apiService.HttpClient.PostAsJsonAsync("Logs", loguser);
+        }
+        catch (HttpRequestException)
+        {
+            var data2 = await response.Content.ReadFromJsonAsync<ResponseModel>();
+            Console.WriteLine($"{data2.Message}", Severity.Error);
+        }
+    }
     public void LogOut()
     {
         ((CustomAuthenticationStateProvider)authProvider).SetUserAsAuLoggedOut();
