--- a/Ecu911/Pages/EtapaPreContractual.razor
+++ b/Ecu911/Pages/EtapaPreContractual.razor
@@ -60,8 +60,17 @@
 
     [Parameter]
     public string id { get; set; }
-    //[Parameter]
-    //public string Id { get; set; }
+
+     private Logs loguser = new Logs();
+
+    protected override async Task OnInitializedAsync()
+    {
+        await apiService.SetAuthHeaders();
+
+       
+    }
+
+
     protected async void Subir()
     {
         Precontractual procesos = new();
@@ -84,7 +93,7 @@
             response.EnsureSuccessStatusCode();
             var data = await response.Content.ReadFromJsonAsync<CreatedResponse>();
             snackBar.Add("Etapa  actualizada!", Severity.Info);
-
+            await RegistroLogs();
             NavigateEstados();
 
 
@@ -98,6 +107,24 @@
 
 
 
+    }
+     private async Task RegistroLogs()
+    {
+
+        HttpResponseMessage? response = new();
+
+        loguser.userName = await sessionStorage.GetItemAsync<string>("Id");
+        loguser.action = "Etapa  actualizada precontractual "+ id;
+        //logs
+        try
+        {
+            response = await apiService.HttpClient.PostAsJsonAsync("Logs", loguser);
+        }
+        catch (HttpRequestException)
+        {
+            var data2 = await response.Content.ReadFromJsonAsync<ResponseModel>();
+            Console.WriteLine($"{data2.Message}", Severity.Error);
+        }
     }
 
 
