--- a/Ecu911/Pages/RestablecerUsuarioSuper.razor
+++ b/Ecu911/Pages/RestablecerUsuarioSuper.razor
@@ -28,7 +28,12 @@
     private List<User> Usuarios = new();
    private string UsuarioId = null;
     private string newPassword = "";
+    private Logs loguser = new Logs();
+    protected override async Task OnInitializedAsync()
+    {
+        await apiService.SetAuthHeaders();
 
+    }
     private async Task GetUsuarios()
     {
         var response = await apiService.HttpClient.GetAsync("/api/User");
@@ -53,12 +58,31 @@
             UsuarioId = "";
             GeneratedPassword password = await response.Content.ReadFromJsonAsync<GeneratedPassword>();
             newPassword = password.Password;
+            await RegistroLogs();
             snackBar.Add("Contraseña restablecida", Severity.Warning);
         }
         catch (HttpRequestException)
         {
             var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
             snackBar.Add($"{data.Message}", Severity.Error);
+        }
+    }
+    private async Task RegistroLogs()
+    {
+
+        HttpResponseMessage? response = new();
+
+        loguser.userName = await sessionStorage.GetItemAsync<string>("Id");
+        loguser.action = "Se restablecio usario="+ UsuarioId;
+        //logs
+        try
+        {
+            response = await apiService.HttpClient.PostAsJsonAsync("Logs", loguser);
+        }
+        catch (HttpRequestException)
+        {
+            var data2 = await response.Content.ReadFromJsonAsync<ResponseModel>();
+            Console.WriteLine($"{data2.Message}", Severity.Error);
         }
     }
 }
